Fix broken images

--- a/recipes/hamburger-buns.html
+++ b/recipes/hamburger-buns.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <h1>Hamburger buns</h1>
-    <img src="../images/hamburger-buns.webp" alt="" />
+    <img
+      src="https://www.allrecipes.com/thmb/cPjxWAmp-kUJiOniH5jfPGub7ug=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1073329-belles-hamburger-buns-vrinda-4x3-1-10f86efd183744f0a42d751f7989968a.jpg"
+      alt="Buns in the oven"
+    />
     <h2>Learn to make Hamburger buns</h2>
     <p>
       The following two lists provide the ingredients and steps to make what's
