--- a/recipes/vintage-lemonade.html
+++ b/recipes/vintage-lemonade.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Vintage lemonade</h1>
     <img
-      src="../images/vintage-lemonade.webp"
+      src="https://www.allrecipes.com/thmb/c_m5hm-nhFkwAZcfrJHO43UT0bs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/445156_Vintage-Lemonade-4x3-195c79927325479bb7848ece5cab897f.jpg"
       alt="Refreshing cold lemonade with strawberries on the side"
     />
     <p>
