--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Lasagna</h1>
     <img
-      src="../images/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.webp"
-      alt="Image of a tray of lasagna with a piece missing"
+      src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg"
+      alt="Image of a piece of Lasagna"
     />
     <h2>Learn to make lasagna</h2>
     <p>
