Add styles to the HTML page

--- a/recipes/hamburger-buns.html
+++ b/recipes/hamburger-buns.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hamburger-buns</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <h1>Hamburger buns</h1>
     <img
+      class="img-size-300"
       src="https://www.allrecipes.com/thmb/cPjxWAmp-kUJiOniH5jfPGub7ug=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1073329-belles-hamburger-buns-vrinda-4x3-1-10f86efd183744f0a42d751f7989968a.jpg"
       alt="Buns in the oven"
     />
