--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <ul>
-      <li><a href="recipes/lasagna.html">Lasagna</a></li>
-      <li><a href="recipes/hamburger-buns.html">Hamburger buns</a></li>
-      <li><a href="recipes/vintage-lemonade.html">Vintage lemonade</a></li>
+      <li class="links"><a href="recipes/lasagna.html">Lasagna</a></li>
+      <li class="links">
+        <a href="recipes/hamburger-buns.html">Hamburger buns</a>
+      </li>
+      <li class="links">
+        <a href="recipes/vintage-lemonade.html">Vintage lemonade</a>
+      </li>
     </ul>
   </body>
 </html>
