--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lasagna</title>
   </head>
+  <link rel="stylesheet" href="../style.css" />
   <body>
     <h1>Lasagna</h1>
     <img
+      class="img-size-300"
       src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg"
       alt="Image of a piece of Lasagna"
     />
