--- a/recipes/vintage-lemonade.html
+++ b/recipes/vintage-lemonade.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vintage lemonade</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <h1>Vintage lemonade</h1>
     <img
+      class="img-size-300"
       src="https://www.allrecipes.com/thmb/c_m5hm-nhFkwAZcfrJHO43UT0bs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/445156_Vintage-Lemonade-4x3-195c79927325479bb7848ece5cab897f.jpg"
       alt="Refreshing cold lemonade with strawberries on the side"
     />
